# paper-pilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
paperpilot/: __init__.py  main.py
paperpilot/api/: app.py  routes.py
paperpilot/citations/: graph.py  routes.py
paperpilot/core/: config.py  database.py  models.py  reading_models.py  reading_routes.py
paperpilot/dashboard/: routes.py  views.py
paperpilot/dashboard/static/: app.css  chat.js  graph.js  queue.js  review.js  topics.js  viewer.js
paperpilot/dashboard/templates/: base.html  chat.html  graph.html  library.html  paper.html  queue.html  review.html  topics.html
paperpilot/embeddings/: indexer.py  routes.py
paperpilot/ingestion/: bibtex.py  dedup.py  jobs.py  recovery.py  routes.py  sources.py  tools_routes.py
paperpilot/parsers/: models.py  pdf_parser.py  routes.py  sections.py
paperpilot/rag/: pipeline.py  routes.py
paperpilot/review/: generator.py  routes.py
paperpilot/search/: hybrid.py  related.py  related_routes.py  routes.py
paperpilot/topics/: clustering.py  routes.py
tests/: test_citations.py  test_dedup.py  test_embeddings.py  test_health.py  test_ingestion.py  test_parsers.py  test_rag.py  test_search.py  test_tools.py
